infrastructure/base/whoami/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  selector:
    app: whoami
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
